--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>Meta examples</title>
+    <meta name="Choua Vue" content="Choua Vue">
+    <meta name="description" content="Choua's Portfolio">
+    <title>Choua Vue</title>
+    <link rel="stylesheet" href="my-css-file.css">
+    <script src="my-js-file.js" defer></script>
 
-    <meta name="author" content="Chris Mills">
-    <meta name="description" content="This is an example page to demonstrate usage of metadata on web pages.">
-
-    <meta property="og:image" content="https://developer.cdn.mozilla.net/static/img/opengraph-logo.dc4e08e2f6af.png">
-    <meta property="og:description" content="This is an example page to demonstrate usage of metadata on web pages.">
-    <meta property="og:title" content="Metadata; The HTML &lt;head&gt;, on MDN">
-
-    <link rel="Shortcut Icon" href="favicon.ico" type="image/x-icon">
-
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Meta examples</h1>
-
-    <p>Japanese example: ご飯が熱い。</p>
-
-    
+      <h>Choua Vue</h>
+    <p>This is my page</p>
   </body>
 </html>
