updates with photo

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="my-css-file.css">
     <script src="my-js-file.js" defer></script>
 
-  </head>
+</head>
+<style>
+    h1 {text-align:center;}
+    p {text-align: center;}
+</style>
   <body>
-      <h>Choua Vue</h>
-    <p>This is my page</p>
+      <h1><strong>Yuno</strong></h1>
+    <p>Welcom to my page!</p>
+    <p class="aligncenter">
+    <img src= Yuno.PNG></p>
+    <p>If you would like to see more pictures of me please check out my social media
+      <a href="https://www.instagram.com/lifeofyunoo/">lifeofyunoo!</a> Thanks Friends!
+    </p>
   </body>
 </html>
