--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="Choua Vue" content="Choua Vue">
     <meta name="description" content="Choua's Portfolio">
     <title>Choua Vue</title>
-    <link rel="stylesheet" href="my-css-file.css">
-    <script src="my-js-file.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 
 </head>
 <style>
